# dtb-kampfrichtereinsatzplaene

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  blank.html  bugreporter.html  createWettkampf.html  editor.html  index.html  licenses.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci_macOS_local.yml  ci_macOS_x64_local.yml  publish_prerelease.yml  publish_release.yml
docs/: DTB-Kampfrichtereinsatzpläne_v1.0.0_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.0.1_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.1.0_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.2.0_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.3.0_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.3.1_Changelog.md  DTB-Kampfrichtereinsatzpläne_v1.3.2_Changelog.md
environment/: .env.production
installer/: LICENSE.rtf  bannerImage.ai  dialogImage.ai  dmgImage.ai  dmgImage.tiff  headerImage.ai  installerIcon.ai  installerIcon.icns  sidebarImage.ai
lib/libkampfrichtereinsatzplaene_docx/: libkampfrichtereinsatzplaene_docx.sln
lib/libkampfrichtereinsatzplaene_docx/libkampfrichtereinsatzplaene_docx/: DocumentWriter.cs  FFI.cs  PDFWriter.cs  Types.cs  libkampfrichtereinsatzplaene_docx.csproj
res/: Tabelle_Vorlage_Leer.docx  Vorlage_Einsatzplan_Leer.docx
signing/: updater_dtb_kampfrichtereinsatzplaene.key.pub
src/: App.css  App.tsx  BugReporter.css  BugReporter.tsx  CreateWettkampf.css  CreateWettkampf.tsx  Editor.css  Editor.tsx  Kampfgericht.css  Kampfgericht.tsx  KampfgerichteRenderer.tsx  Licenses.css  Licenses.tsx  ReplacementJudges.css  ReplacementJudges.tsx  mainBugReporter.tsx  mainCreateWettkampf.tsx  mainEditor.tsx  mainLicenses.tsx  styles.css
src-tauri/: Cargo.toml  Cargo.toml.old  build.rs  macOS_bundle_dmg.sh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: ChromeFetcher.rs  FFI.rs  MailImpl.rs  PrintToPdfImpl.rs  log.rs  main.rs  types.rs
stats/: currentJSBloat_commit_05b060f.html  currentJSBloat_commit_6147a55.html  currentJSBloat_commit_cb4c7e8.html  currentJSBloat_commit_f4222e0.html
