[package]
name = "dtb-kampfrichtereinsatzplaene"
version = "0.0.0"
description = "Eine App zum Erstellen von Kampfrichtereinsatzplänen für Rhönradwettkämpfe des DTB"
authors = ["Philipp Remy <philipp.remy@dtb.de>"]
license = "GPL-3.0-only"
repository = "https://github.com/philippremy/dtb-kampfrichtereinsatzplaene"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [ "shell-open", "dialog-open", "window-set-title", "dialog-ask", "dialog-save", "window-close", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
libc = "0.2.153"
directories = "5.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.56.0", features = ["Win32", "Win32_System", "Win32_System_Console"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
glob = "0.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
