[package]
name = "dtb-kampfrichtereinsatzplaene"
version = "1.0.0-rc-0"
description = "Eine App zum Erstellen von Kampfrichtereinsatzplänen für Rhönradwettkämpfe des DTB"
authors = ["Philipp Remy <philipp.remy@dtb.de>"]
license = "GPL-3.0-only"
repository = "https://github.com/philippremy/dtb-kampfrichtereinsatzplaene"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
vergen = { version = "8.3.1", features = ["git", "build", "cargo", "rustc", "si", "gitoxide"] }

[dependencies]
tauri = { version = "1.6.2", features = [ "updater", "shell-open", "dialog-open", "window-set-title", "dialog-ask", "dialog-save", "window-close", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
libc = "0.2.153"
directories = "5.0.1"
headless_chrome = "1.0.9"
anyhow = "1.0.82"
log = "0.4.21"
walkdir = "2.5.0"
zip = "0.6.6"
ureq = "2.9.7"
mail-send = "0.4.7"
mail-builder = "0.3.1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = ["Win32", "Win32_System", "Win32_System_Console"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
glob = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# ACTIVATE BEFORE FINAL PUBLISH!
# lto = true
# codegen-units = 1
opt-level = "z"
strip = "symbols"
