[package]
name = "dtb-kampfrichtereinsatzplaene"
version = "1.3.1"
description = "Eine App zum Erstellen von Kampfrichtereinsatzplänen für Rhönradwettkämpfe des DTB"
authors = ["Philipp Remy <philipp.remy@dtb.de>"]
license = "GPL-3.0-only"
repository = "https://github.com/philippremy/dtb-kampfrichtereinsatzplaene"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
vergen = { version = "8.3.1", features = ["git", "build", "cargo", "rustc", "si", "gitoxide"] }

[dependencies]
tauri = { version = "2.0.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
libc = "0.2.153"
directories = "5.0.1"
anyhow = "1.0.82"
log = "0.4.21"
walkdir = "2.5.0"
zip = "0.6.6"
ureq = "2.9.7"
mail-send = "0.4.7"
mail-builder = "0.3.1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-process = "2.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = { version = "0.58.0" }
windows = { version = "0.56.0", features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_System_WinRT"] }
webview2-com = { version = "0.33.0", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
glob = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", features = ["default", "exception"] }
objc2-app-kit = { version = "0.2.2", features = ["NSPrintInfo", "NSPrinter"] }
objc2-web-kit = { version = "0.2.2", features = ["WKWebView", "objc2-app-kit", "WKNavigation"] }
objc2-foundation = { version = "0.2.2", features = ["NSDictionary", "NSURL", "NSKeyValueCoding", "NSString"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
